5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1671_1880.log
== TEST (2019-04-19 18:40:57) 
-- CODE:
m=int(input("numero do mes:"))
if(not(1<=m and m<=12)):
	print("numero do mes invalido")
elif(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:41:06) 
-- CODE:
m=int(input("numero do mes:"))
if(not(1<=m and m<=12)):
	print("numero do mes invalido")
elif(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 18:41:13) 
-- CODE:
m=int(input("numero do mes:"))
if(not(1<=m and m<=12)):
	print("numero do mes invalido")
elif(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- EXECUTION TIME:
0.244632
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:41:31) 
-- CODE:
m=int(input("numero do mes:"))
if(not(1<=m and m<=12)):
	print("numero do mes invalido")
elif(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:41:38) 
-- CODE:
m=int(input("numero do mes:"))
if(not(1<=m and m<=12)):
	print("numero do mes invalido")
elif(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:41:43) 
-- CODE:
m=int(input("numero do mes:"))
if(not(1<=m and m<=12)):
	print("numero do mes invalido")
elif(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:41:50) 
-- CODE:
m=int(input("numero do mes:"))
if(not(1<=m and m<=12)):
	print("numero do mes invalido")
elif(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:42:08) 
-- CODE:
m=int(input("numero do mes:"))
if(not(1<=m and m<=12)):
	print("numero do mes invalido")
elif(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
else:
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 18:42:13) 
-- CODE:
m=int(input("numero do mes:"))
if(not(1<=m and m<=12)):
	print("numero do mes invalido")
elif(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
else:
	print("dezembro")
-- EXECUTION TIME:
0.131594
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:42:20) 
-- CODE:
m=int(input("numero do mes:"))
if(not(1<=m and m<=12)):
	print("numero do mes invalido")
elif(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
else:
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 18:45:01) 
-- CODE:
m=int(input("numero do mes:"))
if(not(1<=m and m<=12)):
	print("numero do mes invalido")
elif(m==1):
	print("Janeiro")
elif(m==2):
	print("Fevereiro")
elif(m==3):
	print("Marco")
elif(m==4):
	print("Abril")
elif(m==5):
	print("Maio")
elif(m==6):
	print("Junho")
elif(m==7):
	print("Julho")
elif(m==8):
	print("Agosto")
elif(m==9):
	print("Setembro")
elif(m==10):
	print("Outubro")
elif(m==11):
	print("Novembro")
else:
	print("Dezembro")
-- EXECUTION TIME:
0.182462
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
Abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
Maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:45:03) 
-- CODE:
m=int(input("numero do mes:"))
if(not(1<=m and m<=12)):
	print("numero do mes invalido")
elif(m==1):
	print("Janeiro")
elif(m==2):
	print("Fevereiro")
elif(m==3):
	print("Marco")
elif(m==4):
	print("Abril")
elif(m==5):
	print("Maio")
elif(m==6):
	print("Junho")
elif(m==7):
	print("Julho")
elif(m==8):
	print("Agosto")
elif(m==9):
	print("Setembro")
elif(m==10):
	print("Outubro")
elif(m==11):
	print("Novembro")
else:
	print("Dezembro")
-- OUTPUT:
Abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:46:06) 
-- CODE:
m=int(input("numero do mes:"))
if(not(1<=m and m<=12)):
	print("numero do mes invalido")
elif(m==1):
	print("Janeiro")
elif(m==2):
	print("Fevereiro")
elif(m==3):
	print("Marco")
elif(m==4):
	print("Abril")
elif(m==5):
	print("Maio")
elif(m==6):
	print("Junho")
elif(m==7):
	print("Julho")
elif(m==8):
	print("Agosto")
elif(m==9):
	print("Setembro")
elif(m==10):
	print("Outubro")
elif(m==11):
	print("Novembro")
else:
	print("Dezembro")
-- OUTPUT:
Abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:46:32) 
-- CODE:
m=int(input("numero do mes:"))
if(not(1<=m and m<=12)):
	print("numero do mes invalido")
elif(m==1):
	print("Janeiro")
elif(m==2):
	print("Fevereiro")
elif(m==3):
	print("Marco")
elif(m==4):
	print("Abril")
elif(m==5):
	print("Maio")
elif(m==6):
	print("Junho")
elif(m==7):
	print("Julho")
elif(m==8):
	print("Agosto")
elif(m==9):
	print("Setembro")
elif(m==10):
	print("Outubro")
elif(m==11):
	print("Novembro")
else:
	print("Dezembro")
-- OUTPUT:
Abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:47:04) 
-- CODE:
m=int(input("numero do mes:"))
if(not(1<=m and m<=12)):
	print("numero do mes invalido")
elif(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
else:
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:47:10) 
-- CODE:
m=int(input("numero do mes:"))
if(not(1<=m and m<=12)):
	print("numero do mes invalido")
elif(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
else:
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:47:23) 
-- CODE:
m=int(input("numero do mes:"))
if(not(1<=m and m<=12)):
	print("numero do mes invalido")
elif(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
else:
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:47:47) 
-- CODE:
m=int(input("numero do mes:"))
if(not(1<=m and m<=12)):
	print("numero do mes invalido")
elif(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
else:
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:47:55) 
-- CODE:
m=int(input("numero do mes:"))
if(not(1<=m and m<=12)):
	print("numero do mes invalido")
elif(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("março")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
else:
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:48:06) 
-- CODE:
m=int(input("numero do mes:"))
if(not(1<=m and m<=12)):
	print("numero do mes invalido")
elif(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
else:
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 18:48:12) 
-- CODE:
m=int(input("numero do mes:"))
if(not(1<=m and m<=12)):
	print("numero do mes invalido")
elif(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
else:
	print("dezembro")
-- EXECUTION TIME:
0.120801
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:53:47) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	elif(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero do mes invalido")
-- ERROR:
File "XXXX", line 3
    elif(m==1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:53:58) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 18:54:07) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.128558
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:54:41) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:54:48) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:55:32) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:55:37) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:55:43) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:55:48) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:55:53) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:55:58) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:56:21) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:56:30) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:56:37) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:57:41) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:58:21) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:58:31) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 19:01:12) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("January")
	elif(m==2):
		print("February")
	elif(m==3):
		print("March")
	elif(m==4):
		print("April")
	elif(m==5):
		print("May")
	elif(m==6):
		print("June")
	elif(m==7):
		print("July")
	elif(m==8):
		print("August")
	elif(m==9):
		print("September")
	elif(m==10):
		print("October")
	elif(m==11):
		print("November")
	else:
		print("December")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.171611
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
April
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
May
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 19:01:27) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("January")
	elif(m==2):
		print("February")
	elif(m==3):
		print("March")
	elif(m==4):
		print("April")
	elif(m==5):
		print("May")
	elif(m==6):
		print("June")
	elif(m==7):
		print("July")
	elif(m==8):
		print("August")
	elif(m==9):
		print("September")
	elif(m==10):
		print("October")
	elif(m==11):
		print("November")
	else:
		print("December")
else:
	print("numero do mes invalido")
-- OUTPUT:
April
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 19:01:34) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("January")
	elif(m==2):
		print("February")
	elif(m==3):
		print("March")
	elif(m==4):
		print("April")
	elif(m==5):
		print("May")
	elif(m==6):
		print("June")
	elif(m==7):
		print("July")
	elif(m==8):
		print("August")
	elif(m==9):
		print("September")
	elif(m==10):
		print("October")
	elif(m==11):
		print("November")
	else:
		print("December")
else:
	print("numero do mes invalido")
-- OUTPUT:
April
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 20:08:55) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("January")
	elif(m==2):
		print("February")
	elif(m==3):
		print("March")
	elif(m==4):
		print("April")
	elif(m==5):
		print("May")
	elif(m==6):
		print("June")
	elif(m==7):
		print("July")
	elif(m==8):
		print("August")
	elif(m==9):
		print("September")
	elif(m==10):
		print("October")
	elif(m==11):
		print("November")
	else:
		print("December")
else:
	print("numero do mes invalido")
-- OUTPUT:
April
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 20:09:07) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("January")
	elif(m==2):
		print("February")
	elif(m==3):
		print("March")
	elif(m==4):
		print("April")
	elif(m==5):
		print("May")
	elif(m==6):
		print("June")
	elif(m==7):
		print("July")
	elif(m==8):
		print("August")
	elif(m==9):
		print("September")
	elif(m==10):
		print("October")
	elif(m==11):
		print("November")
	else:
		print("December")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.213581
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
April
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
May
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:57:56) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("January")
	elif(m==2):
		print("February")
	elif(m==3):
		print("March")
	elif(m==4):
		print("April")
	elif(m==5):
		print("May")
	elif(m==6):
		print("June")
	elif(m==7):
		print("July")
	elif(m==8):
		print("August")
	elif(m==9):
		print("September")
	elif(m==10):
		print("October")
	elif(m==11):
		print("November")
	else:
		print("December")
else:
	print("numero do mes invalido")
-- OUTPUT:
April
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:58:02) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("January")
	elif(m==2):
		print("February")
	elif(m==3):
		print("March")
	elif(m==4):
		print("April")
	elif(m==5):
		print("May")
	elif(m==6):
		print("June")
	elif(m==7):
		print("July")
	elif(m==8):
		print("August")
	elif(m==9):
		print("September")
	elif(m==10):
		print("October")
	elif(m==11):
		print("November")
	else:
		print("December")
else:
	print("numero do mes invalido")
-- OUTPUT:
April
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:59:55) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("January")
	elif(m==2):
		print("February")
	elif(m==3):
		print("March")
	elif(m==4):
		print("April")
	elif(m==5):
		print("May")
	elif(m==6):
		print("June")
	elif(m==7):
		print("July")
	elif(m==8):
		print("August")
	elif(m==9):
		print("September")
	elif(m==10):
		print("October")
	elif(m==11):
		print("November")
	else:
		print("December")
else:
	print("numero de mes invalido")
-- OUTPUT:
April
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 13:59:59) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("January")
	elif(m==2):
		print("February")
	elif(m==3):
		print("March")
	elif(m==4):
		print("April")
	elif(m==5):
		print("May")
	elif(m==6):
		print("June")
	elif(m==7):
		print("July")
	elif(m==8):
		print("August")
	elif(m==9):
		print("September")
	elif(m==10):
		print("October")
	elif(m==11):
		print("November")
	else:
		print("December")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.137603
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
April
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
May
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:02:02) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero de mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:02:07) 
-- CODE:
m=int(input("numero do mes:"))
if(1<=m and m<=12):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	else:
		print("dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.297036
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
